tests/golden/type_errors/array_map_non_array.cd
map(1, fun (value) { return value; });
