tests/golden/type_errors/array_map_non_array.err
Type error at 1:37: map expects array as first argument, got number
  map(1, fun (value) { return value; });
                                      ^
